--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -574,6 +574,10 @@ game.notValid=Das Spiel wurde nicht gewertet
 game.notRatedYet=Das Rating ist noch nicht verfügbar
 game.ended=Hat dir das Spiel "{0}" gefallen? Teile deine Erfahrung!
 game.rate=Jetzt bewerten
+userInfo.nameHistory=Namen Historie
+userInfo.nameHistory.date=Zeitpunkt der Änderung
+userInfo.nameHistory.name=Name
+userInfo.nameHistory.noHistory=Benutzer hat seinen Namen nicht geändert
 search.sort.ascending=aufsteigend
 search.sort.descending=absteigend
 query.contains=beinhaltet
