--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -366,6 +366,7 @@ settings.account.steamAccount.prompt=Du kannst dein Steam-Konto hier verknüpfen.
 settings.account.steamAccount.linkToSteam=Mit Steam verknüpfen.
 settings.account.username=FAF Benutzername
 settings.account.username.change=Ändere Benutzername
+settings.account.username.error=Dein Nutzername konnte nicht geändert werden. Sei dir bewusst, dass du ihn nur alle 30 Tage ändern kannst. Server meldet: {0}
 
 achievement.unlockedTitle=Errungenschaft freigeschaltet!
 friend.nowOnlineNotification.title={0} ist jetzt online
